<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">    

    <TextView
        android:id="@+id/tv_new_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true" />
    

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:background="@color/colorButton"
        android:text="@string/add_contact"
		android:textColor="@color/cpb_white"
        android:layout_alignParentBottom="true" />
    
    <ScrollView        
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@id/tv_new_contact_title"
        android:layout_above="@id/btn_add">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
		    <ImageView 
		        android:id="@+id/iv_user_photo"
		        android:src="@drawable/add_user"
		        android:layout_width="100dp"
		        android:layout_height="100dp"/>
		
		    <TextView		        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/name" />
		
		    <EditText
		        android:id="@+id/et_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
				android:hint="Jan"
		        android:inputType="textPersonName" >
		        <requestFocus />
		    </EditText>
		
		    <TextView		        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lastname" />
		
		    <EditText
		        android:id="@+id/et_lastname"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
				android:hint="Kowalski"
		        android:inputType="textPersonName" />
		
		    <TextView		        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email" />
		
		    <EditText
		        android:id="@+id/et_email"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
				android:hint="example@email.com"
		        android:inputType="textEmailAddress" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/public_key" />

		    <EditText
		        android:id="@+id/et_publickey"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textLongMessage"
				android:enabled="false"/>
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:id="@+id/textSchowek"
				/>


				<RadioGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
					android:id="@+id/RadioGrupa"
				android:orientation="vertical"
					>

				<RadioButton
					android:id="@+id/radioZpliku"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Importuj klucz z pliku"

					/>

				<RadioButton
					android:id="@+id/radioZeSchowka"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Importuj klucz ze schowka"
					/>
			</RadioGroup>
			</RelativeLayout>
				android:hint="Enter public key here"
		        android:inputType="textLongMessage" />
    	</LinearLayout>
    </ScrollView>

</RelativeLayout>