<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#e1e0e0">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:id="@+id/contacts"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_details" />

        <ImageView
            android:id="@+id/iv_user_photo"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <View style="@style/Divider"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="First and Last Name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"/>

            </TableRow>
            <View style="@style/Divider"/>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_contact_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Lastname"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"/>

            </TableRow>
            <View style="@style/Divider"/>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_contact_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Email Address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"/>

            </TableRow>

            <View style="@style/Divider"/>
        </TableLayout>

    </LinearLayout>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="skopiuj klucz"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="usuń kontakt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wyślij wiadomość"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"/>


    </TableRow>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back_to_contact"
        android:text="@string/back_to_contacts"
        android:textColor="@color/cpb_white"
        android:layout_alignParentBottom="true"
        android:background="@color/colorButton"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/imageButton"
        android:layout_below="@+id/contacts"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyKey"
            android:text="Kopiuj klucz publiczny"
            android:background="@drawable/contact_copy"
            android:layout_marginLeft="20dp"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete_contact"
            android:text="Usuń kontakt"
            android:background="@drawable/contact_delete"
            android:onClick="delContact"
            android:layout_below="@+id/copyKey"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wyślij wiadomość"
            android:background="@drawable/contact_send"
            android:onClick="goMessage"
            android:layout_below="@+id/btn_delete_contact"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</RelativeLayout>